--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build:watch": "concurrently \"tsc -w\" \"tsc-alias -w\"",
     "start": "nodemon build/server.js",
     "start:dev": "pnpm run start",
-    "start:prod": "node build/server.js"
+    "start:prod": "node build/server.js",
+    "dz:generate": "drizzle-kit generate:pg --config=drizzle.config.json",
+    "dz:drop": "drizzle-kit drop",
+    "dz:push": "drizzle-kit push:pg --config=drizzle.config.json",
+    "dz:migrate": "node build/db/migrate.js"
   },
   "keywords": [
     "the wave",
@@ -19,6 +23,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.0",
+    "drizzle-kit": "^0.20.14",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3"
@@ -26,7 +32,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
+    "zod": "^3.22.4"
   }
 }
