--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dz:generate": "drizzle-kit generate:pg --config=drizzle.config.json",
     "dz:drop": "drizzle-kit drop",
     "dz:push": "drizzle-kit push:pg --config=drizzle.config.json",
-    "dz:migrate": "node build/db/migrate.js"
+    "dz:migrate": "node build/db/migrate.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [
     "the wave",
@@ -24,10 +26,15 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/pg": "^8.11.0",
+    "@types/supertest": "^6.0.2",
     "drizzle-kit": "^0.20.14",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
