--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/pg": "^8.11.0",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "drizzle-kit": "^0.20.14",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
@@ -45,6 +46,8 @@
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.3.4",
     "zod": "^3.22.4"
   }
 }
