perf: Setup simple request logger

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
 DATABASE_URL="postgresql://postgres:password@db:5432/rick_and_morty?schema=public"
+DEBUG=true
 
 # URLs
 ROOT_URL="http://localhost:3000"
