--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "drizzle-kit": "^0.20.14",
+    "pino-pretty": "^10.3.1",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
@@ -45,6 +46,7 @@
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
+    "pino-http": "^9.0.0",
     "postgres": "^3.4.3",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.3.4",
